--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
+    "openai": "^6.9.1",
     "prisma": "5.22.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
